--- a/assets/javascripts/discourse/templates/application.hbs
+++ b/assets/javascripts/discourse/templates/application.hbs
@@ -4,6 +4,7 @@
 
 <div id='main-outlet' {{bind-attr class=backgroundClass}}>
     <div {{bind-attr class=":global-side-bar :side-bar-wrap hideSidebar:no-side-bar"}}>
+        <aside class="side-bar">{{view Discourse.SidebarView}}</aside>
         <section class="main-outlet-wrap">{{outlet}}</section>
   </div>
   {{render "user-card"}}
