--- a/assets/javascripts/discourse/templates/discovery.hbs
+++ b/assets/javascripts/discourse/templates/discovery.hbs
@@ -6,7 +6,7 @@
 
 <div {{bind-attr class=":global-side-bar :side-bar-wrap hideSidebar:no-side-bar"}}>
 
-  <aside class="side-bar">{{view Discourse.SidebarView}}</aside>
+  <div class="side-bar">{{view Discourse.SidebarView}}</div>
 
   <div class='list-controls'>
     <div class="container">
