--- a/assets/javascripts/discourse/templates/application.hbs
+++ b/assets/javascripts/discourse/templates/application.hbs
@@ -2,8 +2,9 @@
 
 <div id='main-outlet' {{bind-attr class=backgroundClass}}>
     <div {{bind-attr class=":global-side-bar :side-bar-wrap hideSidebar:no-side-bar"}}>
-        <aside class="side-bar">{{view "sidebar"}}</aside>
+        <aside class="side-bar-left">{{view "sidebar-left"}}</aside>
         <section class="main-outlet-wrap">{{outlet}}</section>
+        <aside class="side-bar-right">{{view "sidebar-right"}}</aside>
     </div>
   {{render "user-card"}}
 </div>
